Splitting code into smaller more managable chunks, added exception and slf4j logging